tests/macros/select/filter.stderr
error: option `filter` does not exist for kind `select`
 --> $DIR/filter.rs:2:44
  |
2 |     let q = requestty::questions![Select { filter: todo!() }];
  |                                            ^^^^^^
