tests/macros/select/filter.rs
fn main() {
    let q = requestty::questions![Select { filter: todo!() }];
}
